fix search page alignment

--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -85,14 +85,10 @@
 }
 
 .icon-health:before {
-	content: "";
-	width: 16px;
-	height: 16px;
-	display: inline-block;
-	background-image: url();
+
 }
 .icon-sanity:before {
-	content: "";
+
 }
 
 
